<resources>
    <string name="app_name">波形图谱</string>

    <!--ble-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE SPP</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="device_name_default">Device Name</string>
    <string name="receive_byte">Recv Bytes：</string>
    <string name="data_format_default">Ascii</string>
    <string name="data_format_hex">Hex</string>
    <string name="clean">clean</string>
    <string name="send_byte">Send Bytes：</string>
    <string name="send">send</string>
    <string name="scan_ble_device">Scan BLE Device</string>
    <string name="device_name">name</string>
    <string name="device_address">address</string>
    <string name="scanning">Scanning......</string>
    <string name="zero">0</string>
    <string name="speed">0 B/s</string>
    <string name="ble_need_location">Android6.0蓝牙需要开启</string>


    //自动登录
    <string name="weibo_auth_button">微博授权登录</string>
    <string name="qq_auth_button">QQ授权登录</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="label_phone_number">手机号</string>
    <string name="label_verify_code">验证码</string>
    <string name="btn_get_verify_code">获取验证码</string>
    <string name="btn_bind">绑定</string>
    <string name="btn_login_out">退出</string>
    <string name="btn_get_user">获取用户信息</string>
    <string name="btn_login">登录</string>
    <string name="label_password">密码</string>
    <string name="label_radio_verifycode">验证码登录</string>
    <string name="label_radio_password">密码登录\u3000</string>
    <string name="label_old_password">旧密码</string>
    <string name="label_new_password">新密码</string>
    <string name="btn_modify_password">修改密码</string>
    <string name="btn_to_modify_password">修改密码</string>
    <string name="btn_set_password">设置密码</string>
    <string name="okhttpfailed">网络错误</string>
    <string name="open_auth_text">———第三方登录———</string>

    <!-- presswavecore -->
    <string name="blue_point_view_wrap_title_text">蓝牙上传数据点</string>
    <string name="save_point_btn">保存</string>
    <string name="clear_point_btn">清屏</string>
    <string name="dialog_title_text">保存</string>
    <string name="point_name_hint">请输入名称</string>
    <string name="remark_hint">请输入备注</string>
    <string name="save_text">保存</string>
    <string name="cancel_text">取消</string>
    <string name="server_data_download_btn">下载/更新</string>
    <string name="compare_line_btn">对比</string>
    <string name="upload_text">上传标准波</string>
    <string name="no_more_text">没有更多了</string>
    <string name="has_more_text">玩命加载中</string>

    <string name="please_entry_login_user_name">请输入用户名</string>
    <string name="please_entry_login_user_pass">请输入密码</string>
    <string name="please_entry_login_user_certainpass">请输入确认密码</string>
    <string name="please_entry_phone_number">请输手机号</string>

    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="certain">确定</string>
    <string name="back">返回</string>

</resources>
