<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_out"
        style="@style/MyButtonStyle"/>
    <Button
        android:id="@+id/btn_get_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_user"
        style="@style/MyButtonStyle"/>

    <Button
        android:id="@+id/btn_to_modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_to_modify_password"
        style="@style/MyButtonStyle"/>
</LinearLayout>