<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/wrap_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/blue_point_view_wrap_title_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title_name_text" />

        <Button
            android:id="@+id/save_point_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/save_point_btn"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/clear_point_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/save_point_btn"
            android:text="@string/clear_point_btn"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

    <com.ylz.waveform.presswavecore.widget.PointSurfaceView
        android:id="@+id/point_surface_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/point_view_height" />

    <RelativeLayout
        android:id="@+id/wrap_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>
</LinearLayout>