<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/login_top_bg"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/common_item_margin_xnormal"
        android:layout_weight="3"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_item_margin_small">

            <ImageView
                android:id="@+id/phonenumber_lefticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/common_item_margin_xnormal"
                android:src="@mipmap/login_user_name_lefticon" />


            <EditText
                android:id="@+id/phonenumber_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_item_margin_small"
                android:layout_marginRight="@dimen/common_item_margin_xnormal"
                android:layout_toRightOf="@id/phonenumber_lefticon"
                android:background="@mipmap/edittext_bg"
                android:hint="@string/please_entry_phone_number"
                android:padding="@dimen/common_item_padding_normal"
                android:singleLine="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_item_margin_small">

            <ImageView
                android:id="@+id/user_name_lefticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/common_item_margin_xnormal"
                android:src="@mipmap/login_user_pass_lefticon"
                android:text="@string/app_name" />

            <EditText
                android:id="@+id/user_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_item_margin_small"
                android:layout_marginRight="@dimen/common_item_margin_xnormal"
                android:layout_toRightOf="@id/user_name_lefticon"
                android:background="@mipmap/edittext_bg"
                android:hint="@string/please_entry_login_user_name"
                android:padding="@dimen/common_item_padding_normal"
                android:singleLine="true" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_item_margin_small">

            <ImageView
                android:id="@+id/user_pass_lefticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/common_item_margin_xnormal"
                android:src="@mipmap/login_user_pass_lefticon"
                android:text="@string/app_name" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_item_margin_small"
                android:layout_marginRight="@dimen/common_item_margin_xnormal"
                android:layout_toRightOf="@id/user_pass_lefticon"
                android:background="@mipmap/edittext_bg"
                android:hint="@string/please_entry_login_user_pass"
                android:padding="@dimen/common_item_padding_normal"
                android:password="true"
                android:singleLine="true" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_item_margin_small">

            <ImageView
                android:id="@+id/user_certainpass_lefticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/common_item_margin_xnormal"
                android:src="@mipmap/login_user_pass_lefticon"
                android:text="@string/app_name" />

            <EditText
                android:id="@+id/user_certainpass_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_item_margin_small"
                android:layout_marginRight="@dimen/common_item_margin_xnormal"
                android:layout_toRightOf="@id/user_certainpass_lefticon"
                android:background="@mipmap/edittext_bg"
                android:hint="@string/please_entry_login_user_certainpass"
                android:padding="@dimen/common_item_padding_normal"
                android:password="true"
                android:singleLine="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_item_margin_small">

            <Button
                android:id="@+id/regist_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/common_item_margin_big"
                android:layout_marginRight="@dimen/common_item_margin_big"
                android:layout_marginTop="@dimen/common_item_margin_sbig"
                android:background="@mipmap/loging_button_bg"
                android:text="@string/regist"
                android:textColor="@color/white"
                android:textSize="@dimen/common_text_normal" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>

</LinearLayout>